# qwen-asr

./: .dockerignore  pyproject.toml
docker/: cann850-310p-hf.dockerfile  cpu-amd64-hf.dockerfile  cu128.dockerfile  cu130.dockerfile
examples/transformers/: config.yaml
examples/vllm/: config.yaml
scripts/: run_grpcio_tools.sh
src/qwen_asr/: __init__.py
src/qwen_asr/commands/: app.py  utils.py
src/qwen_asr/configs/: __init__.py  constants.py  runtime.py
src/qwen_asr/core/vllm_backend/: __init__.py
src/qwen_asr/inference/: qwen3_asr.py  stream.py  transformers_qwen3_asr.py  utils.py
src/qwen_asr/inferencers/: base.py  grpc_inferencer.py  language.py
src/qwen_asr/inferencers/text/: __init__.py  asr_output.py  transcript_parser.py
src/qwen_asr/inferencers/transformers/: __init__.py  inferencer.py
src/qwen_asr/inferencers/vllm/: __init__.py  inferencer.py  utils.py
src/qwen_asr/protos/asr/: ux_speech.proto  ux_speech_pb2.py  ux_speech_pb2.pyi  ux_speech_pb2_grpc.py  ux_speech_pb2_grpc.pyi
src/qwen_asr/servicer/: __init__.py  servicer.py  transcript.py  utils.py
tests/: demo01.py  demo_client.py  fakes.py  grpc_stub.py  test_app_device_selection.py  test_app_enforce_eager.py  test_backend_selection.py  test_config_loading.py  test_parse_asr_output.py  test_servicer_streaming.py  test_stream_dispatcher.py  test_transformers_input_preparation.py
